# Intro-Qt-Quick-Controls

./: .gitignore  README.md
01-Project-Setup/: CMakeLists.txt  Main.qml  main.cpp
02-Visual-Containers/: CMakeLists.txt  ClimateControls.qml  ZoneControls.qml
03-Introducing-Controls/: CMakeLists.txt  ClimateControls.qml  Main.qml  ZoneControls.qml
04-Icons-Color/: CMakeLists.txt  ClimateControls.qml  Main.qml  ZoneControls.qml
